[package]
name = "sned"
version = "0.1.0"
authors = ["hmir"]
edition = "2018"

[dependencies]
app_dirs = "1.2"
format_num = "0.1"
indicatif = "0.15"
prettytable-rs = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
structopt = "0.3"